--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +16,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "multer": "^1.4.2",
-    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
