--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "NODE_ENV=test && jest --watchAll --detectOpenHandles"
+   
+    "test": "NODE_ENV=test && jest --watchAll --detectOpenHandles",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "start": "node index.js"
   },
   "jest": {
     "testEnvironment": "node"
