--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
-   
+    "start": "node index.js",
     "test": "NODE_ENV=test && jest --watchAll --detectOpenHandles",
-    "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node index.js"
+    "heroku-postbuild": "npm run install-client && cd client && npm run build"
   },
   "jest": {
     "testEnvironment": "node"
